Bug 1692736 - pass namespace id when writing/reading TransactionData r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D105272